edits to discussion and points

--- a/Appendices/Methodology_Alt.tex
+++ b/Appendices/Methodology_Alt.tex
@@ -99,7 +99,7 @@ and
 \subsection{Incomplete Data: Predicting and Monetizing Life-Cycle and Costs and Benefits} \label{appendix:incomplete}
 \label{app:method_noobs}
 
-\noindent We do not observe post-$a^*$ life-cycle profiles for outcomes that are important for estimating the lifetime benefits of ABC/CARE. The main examples are parental income, subject labor income, public-transfer income, and health-related outcome variables. ABC/CARE provided full-day childcare. It relaxed the time constraints of the mothers of the treated children, who were able to work more. Potentially, it could shift the life-cycle profile of the mothers, either by allowing them to take more schooling or obtain more work experience. We estimate these profiles. Similarly, a comprehensive evaluation accounts for the effect on the life-cycle profiles of subject labor income and public-transfer income. We follow the strategy outlined in Section~\ref{section:cbamethodology} and implemented in Section~\ref{section:cbaresults} to identify and estimate these profiles and predict post-$a^\ast$ outcomes.\footnote{In this section, attrition or partial observations is not an issue: the predictors that we use to construct out-of-sample predictions are classified as complete data (see Appendices~\ref{app:method_fullobs} and \ref{app:method_partialobs}}.\\
+\noindent We do not observe post-$a^*$ life-cycle profiles for outcomes that are important for estimating the lifetime benefits of ABC/CARE. The main examples are parental income, subject labor income, public-transfer income, and health-related outcome variables. ABC/CARE provided full-day childcare. It relaxed the time constraints of the mothers of the treated children, who were able to work more. Potentially, it might shift the life-cycle profiles of the mothers, either by allowing them to take more schooling or obtain more work experience. We estimate these profiles. Similarly, a comprehensive evaluation accounts for the effect on the life-cycle profiles of subject labor income and public-transfer income. We follow the strategy outlined in Section~\ref{section:cbamethodology} and implemented in Section~\ref{section:cbaresults} to identify and estimate these profiles and predict post-$a^\ast$ outcomes.\footnote{In this section, attrition or partial observations is not an issue: the predictors that we use to construct out-of-sample predictions are classified as complete data (see Appendices~\ref{app:method_fullobs} and \ref{app:method_partialobs}}.\\
 
 \noindent This appendix documents how we implement this strategy and provides complementary evidence supporting it, cited throughout the main text. We proceed as follows. Appendix~\ref{app:datasets} describes the auxiliary datasets that we use to predict out of sample. Appendix~\ref{appendix:match} provides details on the matching strategy used to construct the synthetic or virtual treatment and controls groups. Appendix~\ref{appendix:pred} documents the variables that use to make predictions. The next three appendices provide tests for the key assumptions listed in Section~\ref{section:cbamethodology}: Appendix~\ref{app:containsupport} provides tests of Assumption~\ref{ass:contain}, Appendix~\ref{app:endogeneity} provides tests for Assumption~\ref{ass:exog}, and Appendix~\ref{app:invariance} provides tests for Assumption~\ref{ass:summary}.\footnote{We provide tests for Assumption~\ref{ass:alignment} in the main text} As in the main text, our prediction strategy for subject's transfer and labor income are treated jointly because we follow the same strategy---although we provide some separate details when necessary. For parental income we provide three different prediction strategies and document them in Appendix~\ref{app:parentalincome}.\\
 
@@ -107,9 +107,9 @@ and
 
 \subsubsection{Overview of Our Approach and A Summary of Findings}
 
-\noindent As noted in the text, our strategy is developed and implemented in two stages. In Stage I, we find comparison groups that are ``comparable'' using different criteria documented below. This can be thought of as a type of matching. We explore a variety of criteria: (a) A very crude match using a subset of variables in $\mathcal{B}$; (b) The full set of eligibility criteria embodied in $B \in \mathcal{B}$; (c) Variables $X^d_{k,a}, k\in \{e,n\}, a\in \{1, \dots, A\}$ that are (i) affected by treatment, (ii) are exogenous (in the sense of being unrelated to model error terms (e.g., as in Equation~\ref{eq:outcome}), and (iii) are available in both the experimental and nonexperimental samples. Stage II uses the constructed samples to make out of (experimental) sample forecasts, assuming structural invariance (Assumption~\ref{ass:summary}). Stage II  might be executed in several ways.\\
+\noindent As noted in the text, our strategy is developed and implemented in two stages. In Stage I, we find comparison groups that are ``comparable'' using different criteria documented below. This can be thought of as a type of matching. The matching could be coarse or fine. We use a variety of matching criteria: (a) constructing coarse matches using a subset of variables in $\mathcal{B}$; (b) using the full set of eligibility criteria embodied in $B \in \mathcal{B}$; (c) matching on variables $X^d_{k,a}, k\in \{e,n\}, a\in \{1, \dots, A\}$ that are (i) affected by treatment, (ii) are exogenous (in the sense of being unrelated to model error terms (e.g., as in Equation~\ref{eq:outcome}),\footnote{As noted in the text, for mean treatment effect forecasts we only need exogeneity of the predictors with regard to the \emph{differences} in the errors across treatment and control, not the levels.} and (iii) are available in both the experimental and nonexperimental samples. Stage II uses the constructed samples to build models to make out of (experimental) sample forecasts, assuming structural invariance (Assumption~\ref{ass:summary}). Stage II  might be executed in several ways.\\
 
-\noindent The most direct way is to use matching on common variables in both samples and to use post-$a^*$ realizations in the comparison samples to construct forecasts. This approach is most effective when the $X^d_{k,a}$ are age invariant, $k \in \{e,n\}, a \in\{1,\dots, A\}$. We implement this approach in this appendix. We also consider a parametric model-based approach that estimates Equation~\ref{eq:outcome} in the main text in the experimental and comparison samples and extrapolates using the comparison samples. We adopt both approaches for comparison samples constructed in different ways. We find a surprising robustness across approaches in our estimates that inspires confidence in the benefit/cost estimates reported in the text.\\
+\noindent The most direct way is to use matching on common variables in both samples and to use post-$a^*$ realizations in the comparison samples to construct forecasts. This approach is most effective when the $\bm{X}^d_{k,a}$ are age invariant, $k \in \{e,n\}, a \in\{1,\dots, A\}$. We implement this approach in this appendix. We also consider a parametric model-based approach that estimates Equation~\ref{eq:outcome} in the main text in the experimental and comparison samples and extrapolates using the comparison samples. We adopt both approaches for comparison samples constructed in different ways. We find a surprising robustness across approaches in our estimates that inspires confidence in the benefit/cost estimates reported in the text.\\
 
 \subsubsection{Auxiliary Datasets} \label{app:datasets}
 
@@ -162,19 +162,19 @@ We use the following samples to predict labor and transfer income. Different sam
 
 \subsubsection{Constructing Synthetic Treatment and Controls Groups}\label{appendix:match}
 
-\noindent The first principle for finding non-experimental synthetic treatment or controls group members is that they be eligible for the program, i.e., $\bm{B}_n \in \mathcal{B}_{0}$. One requirement is that the variables be present in both experimental and control samples. The harder challenge is using these variables to find counterparts to the treated and the controlled in the non-experimental samples where no one directly receives treatment.\\
+\noindent The first principle for finding non-experimental synthetic treatment or controls group members is that they be eligible for the program, i.e., $\bm{B}_n \in \mathcal{B}_{0}$. To implement this condition, we require that the $\bm{B}$ variables be present in both experimental and control samples. An additional, harder challenge is to use these variables to find counterparts to the treated and the controlled in the non-experimental samples where no one directly receives treatment.\\
 
-\noindent Consider outcome $Y^d_{k,j,a}$ generated by $\bm{B}_k, \bm{X}^d_{k,j,a}$ (defined as the relevant predictor variables for $Y_{k,j,a}$) and also generated by $\varepsilon^d_{k,j,a}$. Under exogeneity (Assumption~\ref{ass:exog}), we can match on both $\bm{B}_k$ and $\bm{X}^d_{k,j,a}$. This assumption allows us to  use variables $\bm{X}^d_{k,j,a}$ that are caused by treatment and that predict outcome $j$ and are invariant after $a^\ast$ (e.g., ability). If exogeneity is not satisfied, matching on $\bm{X}^d_{k,j,a}$ becomes problematic (see \citealp{Heckman_Navarro_2004_REStat}). Note that we can match on $\bm{B}_k$ within the the set of individuals in the auxiliary samples such that $\bm{B}_k \in \mathcal{B}_{0}$. This is preferable in scenarios in which Assumption~\ref{ass:exog} is violated because the entire analysis is conditional on $\bm{B} \in \mathcal{B}$. Below, we show that our estimates are not sensitive to whether we match on $\bm{B}_k$, match on $\bm{X}^d_{k,j,a}$ alone, or match on both $\bm{B}_k$ and $\bm{X}^d_{k,j,a}$.\\
+\noindent Consider outcome $Y^d_{k,j,a}$ generated by $\bm{B}_k, \bm{X}^d_{k,j,a}$ (defined as the relevant predictor variables for $Y_{k,j,a}$) and also generated by $\varepsilon^d_{k,j,a}$. Under exogeneity (Assumption~\ref{ass:exog}), we can match on both $\bm{B}_k$ and $\bm{X}^d_{k,j,a}$. This assumption allows us to  use variables $\bm{X}^d_{k,j,a}$ that are caused by treatment and that predict outcome $j$ and are invariant after $a^\ast$ (e.g., ability). If exogeneity is not satisfied, matching on $\bm{X}^d_{k,j,a}$ becomes problematic (see \citealp{Heckman_Navarro_2004_REStat}). Note that we can match on $\bm{B}_k$ in the set of individuals in the auxiliary samples with $\bm{B}_k \in \mathcal{B}_{0}$. Note that $\bm{B}_k$ need not be exogenous. Our analysis is conditional on $\bm{B} \in \mathcal{B}$. Below, we show that our estimates are not sensitive to whether we match on $\bm{B}_k$, match on $\bm{X}^d_{k,j,a}$ alone, or match on both $\bm{B}_k$ and $\bm{X}^d_{k,j,a}$.\\
 
 \noindent For the moment, simplify notation and assume that $\bm{B}_k$ is absorbed into $\bm{X}^d_{k,j,a}$. We relax this assumption below. For each treatment group member $i$ in treatment status $d$, we find counterparts following the analysis of \citet{Heckman_Ichimura_etal_1998_REStud}. We do not construct different synthetic treatment and control groups for each age and for each outcome that we predict. We find one synthetic treatment and one synthetic control group in each auxiliary sample and use these samples to predict each outcomes at each age. We explain in Appendix~\ref{app:datasets} what auxiliary samples are used to predict outcomes at each age. That is, we use the same synthetic treatment and control groups to predict all of the outcomes. For this reason, we drop the age and outcome subindices for the rest of this section.\\
 
-\noindent Matched samples can be constructed in many ways using the various criteria listed at the end of Section~\ref{app:datasets}. One method that combines Stage I (sample construction) and Stage II (estimation) is the following. This provides a nonparametric approach to forecasting.\\
+\noindent Matched samples can be constructed in many ways using the various criteria listed at the end of Section~\ref{app:datasets}. One method that combines Stage I (sample construction) and Stage II (estimation) is the following. This provides a nonparametric approach to forecasting. It is conditional on a common value of $\bm{B}$ in both samples.\\
 
-\noindent Match an individual $l(i)$ in the auxiliary sample for whom $\bm{B}_{l(i),n} \in \mathcal{B}_{0}$ to find synthetic treatment and control groups by following Algorithm~\ref{alg:match}.\\
+\noindent Match an individual $l(i)$ in the auxiliary sample to person $i$ in the treatment samples to find synthetic treatment and control groups by following Algorithm~\ref{alg:match}.\\
 
 \onehalfspacing
 \begin{algorithm} \label{alg:match}
-For individual $i$ in experimental sample ($k=e$), an individual $l(i)$ in the auxiliary sample ($k=n$) for whom $\bm{B}_{l(i),n} \in \mathcal{B}_{0}$ is a potential counterpart if
+For individual $i$ in experimental sample ($k=e$), an individual $l(i)$ in the auxiliary sample ($k=n$) is a potential counterpart if
 
 \begin{equation}\label{eq:ingrownnail}
 \sqrt{(\bm{X}^d_{i,e} - \bm{X}^d_{i,l(i),n})^\prime (\bm{\Sigma}^d_e)^{-1} (\bm{X}^d_{i,e} - \bm{X}^d_{i,l(i),n})} \leq \epsilon
@@ -184,9 +184,7 @@ For individual $i$ in experimental sample ($k=e$), an individual $l(i)$ in the a
 \end{algorithm}
 \doublespacing
 
-\noindent We can also use synthetic control and treatment groups constructed in various ways to estimate the dynamic relationships between outcomes and predictors in the auxiliary samples and use them to form predictions in the non-experimental sample. In this model-based approach, we construct treatment effects for each outcome at each age. In our main estimation, we match both on $\bm{B}_k$ and $\bm{X}^d_{k}$. We next examine the sensitivity to the use of different matching variables next. We find little sensitivity to choices of matching variables and to using parametric or non-parametric approaches.\\
-
-\noindent The lack of sensitivity suggests that the dynamic relationship that we fit in the auxiliary sample is invariant to the sample that we use to estimate it, which supports exogeneity Assumption~\ref{ass:summary}.\\
+\noindent We can also use synthetic control and treatment groups constructed in various ways to estimate dynamic relationships between outcomes and predictors in the auxiliary samples and use them to form predictions in the non-experimental sample. In this model-based approach, we construct treatment effects for each outcome at each age. In our main approach to estimation, we match both on $\bm{B}_k$ and $\bm{X}^d_{k}$. We next examine the sensitivity to the use of different matching variables next. We find little sensitivity to choices of matching variables and to using parametric or non-parametric approaches. The lack of sensitivity suggests that the dynamic relationship that we fit in the auxiliary sample is invariant to the sample used to estimate it, which supports exogeneity Assumption~\ref{ass:summary}.\\
 
 \noindent A non-parametric alternative to the model-based procedure is to find a match (or a set of matches) $l(i)$ in the auxiliary sample for each individual $i$ in the experimental sample and impute the dynamic trajectories of individual(s) $l(i)$ to individual $i$, using Algorithm~\ref{alg:match}. We develop this alternative in Appendix~\ref{appendix:nonpar}.\\
 
@@ -246,12 +244,12 @@ When constructing synthetic control and treatment groups we use each of the foll
 		\includegraphics[width=\textwidth]{output/labor_20-65_pset1_mset3_male_sensitivity.eps}
 \end{subfigure}
 \footnotesize \justify
-Note: This figure displays the predicted labor income profile obtained when constructing control- and treatment-group matches according to the procedure in Section~\ref{sec:usingaux}. We use data from the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79) (ages 22 to 29) and the National Longitudinal Survey of Youth 1979 (NLSY79) and the Panel Study of Income Dynamics (PSID) (ages 29 to 67). We vary the matching variables across the different panels, for both males and females. Pre-treatment variables: male and Black indicators and year of birth. Post-treatment variables: years of education at age 30 and labor income at age 30. Each panel shows the average root-mean squared error (and its corresponding standard error) of the prediction in the auxiliary datasets. The average is across ages 22 to 67. When we do not weight (match) the samples, the average root-mean squared error is the same across the treatment and control groups by construction (no synthetic groups are created when there is no weighting. 
+Note: This figure displays the predicted labor income profile obtained when constructing control- and treatment-group matches according to the procedure in Section~\ref{sec:usingaux}. We use data from the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79) (ages 22 to 29) and the National Longitudinal Survey of Youth 1979 (NLSY79) and the Panel Study of Income Dynamics (PSID) (ages 29 to 67). We vary the matching variables across the different panels, for both males and females. Pre-treatment variables: male and Black indicators and year of birth. Post-treatment variables: years of education at age 30 and labor income at age 30. Each panel shows the average root-mean squared error (and its corresponding standard error) of the prediction in the auxiliary datasets. The average is across ages 22 to 67. When we do not weight (match) the samples, the average root-mean squared error is the same across the treatment and control groups by construction (no synthetic groups are created when there is no weighting.
 \end{sidewaysfigure}
 
 \subsubsection{Variables Used to Predict Out-of-Sample Outcomes} \label{appendix:pred}
 
-We base our predictions for a generic outcome, $Y_{k,j,a}$ on background (pre-treatment) variables, $\bm{B}_k$, and variables that could have been affected by treatment $\bm{X}_{k,j,a}$. $\bm{X}_{k,j,a}$ can contain lagged values of $Y_{k,j,a}$. \textbf{[JJH: Is this the parametric or non-parametric approach?] [JLG: everything that we describe is the parametric approach, which is what we follow in the main text. Appendix C.3.4.1 is the only one that describes and presents non-parametric results]}\\
+We base our model-based predictions for a generic outcome, $Y_{k,j,a}$ on background (pre-treatment) variables, $\bm{B}_k$, and variables that could have been affected by treatment $\bm{X}_{k,j,a}$. $\bm{X}_{k,j,a}$ can contain lagged values of $Y_{k,j,a}$.\\
 
 \noindent Our predictions are based on identifying and estimating relationships between the outcomes we seek to predict at age $a$, $Y_{k,j,a}$, in the experimental samples and using the fitted relationships in the auxiliary samples. We produce predictions for each outcome at each age.\\
 
@@ -286,7 +284,7 @@ We base our predictions for a generic outcome, $Y_{k,j,a}$ on background (pre-tr
 \input{output/combined_predict_ready.tex}
 \begin{tablenotes}
 \footnotesize
-\item Note: All columns display regressions of labor income at age 30 on the different variables listed in the rows. If the space for the coefficient appears empty, it was not included in the regression. All money figures are in 2014 USD. The parentheses next to the variable indicates the age of measurement. Education is measured as years of education. Robust standard errors are in parentheses. We weigh the individuals in the auxiliary samples to match them on observed characteristics to the individuals using the procedure in Appendix~\ref{appendix:match}. $^{***}$: $p$-value $< .01$. $^{**}$: $p$-value $< .05$. $^{*}$: $p$-value $< .10$. \textbf{[JJH: These are model based?] [JLG: correct.]}
+\item Note: All columns display regressions of labor income at age 30 on the different variables listed in the rows. If the space for the coefficient appears empty, it was not included in the regression. All money figures are in 2014 USD. The parentheses next to the variable indicates the age of measurement. Education is measured as years of education. Robust standard errors are in parentheses. We weigh the individuals in the auxiliary samples to match them on observed characteristics to the individuals using the procedure in Appendix~\ref{appendix:match}. $^{***}$: $p$-value $< .01$. $^{**}$: $p$-value $< .05$. $^{*}$: $p$-value $< .10$.
 \end{tablenotes}
 \end{threeparttable}
 \end{sidewaystable}
@@ -309,7 +307,7 @@ We base our predictions for a generic outcome, $Y_{k,j,a}$ on background (pre-tr
 
 \noindent An alternative to the predication strategy that we use throughout the main text and the preceding appendix, is the following. For each individual ($i$) in the experimental sample ($e$), we can: (i) find a match or a set of matches in the auxiliary sample ($n$) using Algorithm~\ref{alg:match}; and (ii) use the profiles of the individual(s) in the auxiliary samples as the profiles of the individual $i$ in the experimental sample. This is a non-parametric strategy: instead of fitting a dynamic relationship in the non-experimental sample and use it to form out-of-sample predictions, we simply match individuals using Algorithm~\ref{alg:match} to impute labor income profiles.\\
 
-\noindent Table~\ref{table:nvpli} compares the results from the approach we use throughout the main text and the non-parametric approach that we introduce in this section. We use pre- and post-treatment variables to match (using the same variables as the main approach of Appendix~\ref{appendix:match}). An individual $l(i)$ in the auxiliary sample is a match for individual $i$ in the experimental sample if the left-hand side of \eqref{eq:ingrownnail} is the minimal value across all individuals in the auxiliary sample. We present the discounted net present value (treatment - control) for labor income in 2014 dollars. The approaches are in rough agreement.\\
+\noindent Table~\ref{table:nvpli} compares the results from the approach we use throughout the main text and the non-parametric approach that we introduce in this section. We use pre- and post-treatment variables to match (using the same variables as the main approach of Appendix~\ref{appendix:match}). An individual $l(i)$ in the auxiliary sample is a match for individual $i$ in the experimental sample if it is in the neighborhood defined by the left-hand side of \eqref{eq:ingrownnail} across all individuals in the auxiliary sample. We present the discounted net present value (treatment - control) for labor income in 2014 dollars. The approaches are in rough agreement. (Analogous results for other variables are available upon request from the authors.)\\
 
 \begin{table}[H]
 \begin{threeparttable}
@@ -441,8 +439,6 @@ Note: Panel (a) displays a factor score estimated based on the measurement syste
 \noindent We can also estimates $\bm{\theta}_{a}^d$ in the auxiliary sample. For want of data to approximate $\bm{\theta}_{c}, \bm{\theta}_{n}$ in PSID and NLSY79, we use the CNLSY in this appendix. Our measurement system for $\bm{\theta}_{c}$ consists of reading and comprehension PIAT scores as well as by the Peabody Picture Vocabulary Test (PPVT). Our measurement system for $\bm{\theta}_{n}$ is based on six scales of the Behavior Problems Index (e.g., anxiety, dependency, social behavior).\\
 
 \noindent Once these estimates are available, we can test Assumption~\ref{ass:exog} in the experimental and auxiliary samples. The test consists of the following. Let $\bm{\gamma}^E$ be the parameter associated to $\bm{X}^d_{k,a}$ in Equation (a) in System~\eqref{eq:sa-msystemmain} when not accounting for $\bm{\theta}_{a}^d$. Similarly, let $\bm{\gamma}^I$ be the parameter associated with $\bm{X}^d_{k,a}$ in Equation (a) in System~\eqref{eq:sa-msystemmain} when accounting for $\bm{\theta}_{a}^d$. Under the null hypotheses, Assumption~\ref{ass:exog} holds and $\bm{\theta}_{a}^d$ is an irrelevant predictor in Equation (a) in System~\eqref{eq:sa-msystemmain}. This makes the OLS estimate of $\bm{\gamma}^E$ inconsistent. If the null hypotheses are false, $\bm{X}^d_{k,a}$ and $\varepsilon_{a}^d$ are not independent, $\bm{\gamma}^I$ is consistent and $\bm{\gamma}^E$ is not. We test the null hypothesis by asking if the elements in $\bm{\theta}_{a}^d$ are relevant predictors of a set of outcomes at age 30, so that we can perform the tests both the experimental and the auxiliary samples. We contrast specifications with and without including estimates of $\bm{\theta}_{a}^d$, and report the $F$-statistic corresponding to this comparison. This is a version of a Durbin-Wu-Hausman test \citep[see][]{Durbin_1954_RISI,Wu_1973_Econometrica,Hausman_1978_Econometrica}. Tables~\ref{table:endoginc} to \ref{table:trincome} present the results. In most cases, we are not able to reject the null hypothesis that Assumption~\ref{ass:exog} holds.\\
-
-\noindent \textbf{[JJH: What if we do by gender?] [JLG: By gender we lose all predicting power and the $R^2$'s drop. We can add them, but it doesn't look good at all.] [JJH: Place in auxiliary appendix.]}
 
 
 \begin{sidewaystable}[H]
@@ -1378,4 +1374,4 @@ Note: Panel (a) displays the empirical bootstrap distribution for the estimate o
 \item Discard internal rate of returns not satisfying the single crossing property (see Appendix~\ref{app:method_irr}).
 \item Compute standard errors and $p$-value's as before.
 
-\end{enumerate}
+\end{enumerate} 
