--- a/DWL_doc.tex
+++ b/DWL_doc.tex
@@ -35,7 +35,7 @@ Note: The last column indicates whether the public cost is a transfer (\checkmar
 
 The baseline estimates in \citet{Garcia_etal_2016_Comp_CBA_Unpublished} are calculated assuming that every dollar of public spending generates 50 cents of DWL. In this analysis we show the amount of government investment without DWL. We present the non-discounted value.
 
-Tables~\ref{tab:dwl-npv-rslts2} through~\ref{tab:dwl-npv-rslts8} present the values of the different public components, per person of the government investment under a marginal tax rate of 0. 
+Tables~\ref{tab:dwl-npv-rslts2} through~\ref{tab:dwl-npv-rslts8} present the values of the different public components, per person of the government investment under a marginal tax rate of 0. Tables~\ref{tab:dwl-npv-rslts2-dr3} through~\ref{tab:dwl-npv-rslts8-dr3} present the analogous values a discount rate of 3\%.
 
 \begin{table}[htbp]
 \centering
@@ -44,10 +44,15 @@ Tables~\ref{tab:dwl-npv-rslts2} through~\ref{tab:dwl-npv-rslts8} present the val
 \caption{Government Investment per Individual, Treatment vs. Next Best}\label{tab:dwl-npv-rslts2}
 \begin{tabular}{lccccccccccccc}
 \toprule
-Sample	&	Treatment	&	\mc{1}{c}{Alternative }	&	Crime	&	\mc{1}{c}{Subject's}&	\mc{1}{c}{Mother's}	&	Health	&\mc{1}{c}{Transfer} & DI Claim & SSI Claim & SS Claim & Subtotal & DWL &	Total	\\
+Sample	&	Treatment	&	\mc{1}{c}{Alternative }	&	Crime	&	\mc{1}{c}{Subject's}&	\mc{1}{c}{Mother's}	&	Health	&\mc{1}{c}{Transfer} & DI Claim & SS Claim & SSI Claim & Subtotal & DWL &	Total	\\
 		& 		&	\mc{1}{c}{Preschool}			&			&	\mc{1}{c}{Education}		&	\mc{1}{c}{Education}	&		&  \mc{1}{c}{Income} &		&	&		&		&		& 	\\
 \midrule
-Female	&		-67,805		&		14,717		&		32,288		&		12,669		&		1,663		&		-40,310		&		10,441		&		-423		&		-1,195		&		-156		&	-38,110	&	-19,055	&	-57,165	\\	&	$(	3,377	)$	&	$(	1,799	)$	&	$(	19,432	)$	&	$(	9,310	)$	&	$(	1,772	)$	&	$(	106,815	)$	&	$(	56,979	)$	&	$(	824	)$	&	$(	23,645	)$	&	$(	9,963	)$	&		&		&		\\Male	&		-67,805		&		13,059		&		19,285		&		8,126		&		33		&		-68,555		&		-21,803		&		559		&		-28,376		&		6,955		&	-138,522	&	-69,261	&	-207,783	\\	&	$(	3,377	)$	&	$(	1,589	)$	&	$(	36,224	)$	&	$(	6,585	)$	&	$(	2,033	)$	&	$(	183,345	)$	&	$(	21,887	)$	&	$(	1,901	)$	&	$(	45,085	)$	&	$(	14,852	)$	&		&		&		\\Pooled	&		-67,805		&		13,581		&		26,955		&		6,312		&		1,155		&		-68,359		&		-9,041		&		26		&		-19,903		&		5,466		&	-111,614	&	-55,807	&	-167,421	\\	&	$(	3,377	)$	&	$(	1,213	)$	&	$(	21,858	)$	&	$(	6,479	)$	&	$(	1,190	)$	&	$(	108,850	)$	&	$(	32,703	)$	&	$(	996	)$	&	$(	25,851	)$	&	$(	10,343	)$	&		&		&		\\
+Female	&		-67,805		&		14,717		&		32,288		&		12,669		&		1,663		&		-40,310		&		10,441		&		-423		&		-1,195		&		-156		&	-38,110	&	-19,055	&	-57,165	\\
+	&	$(	3,377	)$	&	$(	1,799	)$	&	$(	19,432	)$	&	$(	9,310	)$	&	$(	1,772	)$	&	$(	106,815	)$	&	$(	56,979	)$	&	$(	824	)$	&	$(	23,645	)$	&	$(	9,963	)$	&		&		&		\\
+Male	&		-67,805		&		13,059		&		19,285		&		8,126		&		33		&		-68,555		&		-21,803		&		559		&		-28,376		&		6,955		&	-138,522	&	-69,261	&	-207,783	\\
+	&	$(	3,377	)$	&	$(	1,589	)$	&	$(	36,224	)$	&	$(	6,585	)$	&	$(	2,033	)$	&	$(	183,345	)$	&	$(	21,887	)$	&	$(	1,901	)$	&	$(	45,085	)$	&	$(	14,852	)$	&		&		&		\\
+Pooled	&		-67,805		&		13,581		&		26,955		&		6,312		&		1,155		&		-68,359		&		-9,041		&		26		&		-19,903		&		5,466		&	-111,614	&	-55,807	&	-167,421	\\
+	&	$(	3,377	)$	&	$(	1,213	)$	&	$(	21,858	)$	&	$(	6,479	)$	&	$(	1,190	)$	&	$(	108,850	)$	&	$(	32,703	)$	&	$(	996	)$	&	$(	25,851	)$	&	$(	10,343	)$	&		&		&		\\
 \bottomrule
 \end{tabular}
 \begin{tablenotes}
@@ -67,10 +72,15 @@ Note: This table shows the non-discounted value of government investment by comp
 \caption{Government Investment per Individual, Treatment vs. Stay at Home}\label{tab:dwl-npv-rslts5}
 \begin{tabular}{lccccccccccccc}
 \toprule
-Sample	&	Treatment	&	\mc{1}{c}{Alternative }	&	Crime	&	\mc{1}{c}{Subject's}&	\mc{1}{c}{Mother's}	&	Health	&\mc{1}{c}{Transfer} & DI Claim & SSI Claim & SS Claim & Subtotal & DWL &	Total	\\
+Sample	&	Treatment	&	\mc{1}{c}{Alternative }	&	Crime	&	\mc{1}{c}{Subject's}&	\mc{1}{c}{Mother's}	&	Health	&\mc{1}{c}{Transfer} & DI Claim & SS Claim & SSI Claim & Subtotal & DWL &	Total	\\
 		& 		&	\mc{1}{c}{Preschool}			&			&	\mc{1}{c}{Education}		&	\mc{1}{c}{Education}	&		&  \mc{1}{c}{Income} &		&	&		&		&		& 	\\
 \midrule
-Female	&		-72,436		&		286		&		78,696		&		-20,173		&		3,914		&		13,192		&		4,038		&		867		&		-19,703		&		17,043		&	5,725	&	2,862	&	8,587	\\	&	$(	4,060	)$	&	$(	122	)$	&	$(	62,421	)$	&	$(	6,339	)$	&	$(	2,489	)$	&	$(	156,345	)$	&	$(	68,235	)$	&	$(	1,445	)$	&	$(	34,889	)$	&	$(	18,863	)$	&		&		&		\\Male	&		-72,436		&				&		1,899		&		1,239		&		-1,257		&		-152,816		&		-34,963		&		-168		&		-51,759		&		3,308		&	-306,954	&	-153,477	&	-460,431	\\	&	$(	4,060	)$	&				&	$(	46,069	)$	&	$(	11,222	)$	&	$(	2,847	)$	&	$(	240,772	)$	&	$(	25,359	)$	&	$(	2,500	)$	&	$(	57,368	)$	&	$(	18,202	)$	&		&		&		\\Pooled	&		-72,436		&		149		&		38,273		&		-9,495		&		1,744		&		-51,179		&		-26,458		&		593		&		-38,808		&		16,337		&	-141,278	&	-70,639	&	-211,917	\\	&	$(	4,060	)$	&	$(	68	)$	&	$(	36,950	)$	&	$(	7,286	)$	&	$(	1,891	)$	&	$(	167,140	)$	&	$(	50,614	)$	&	$(	1,807	)$	&	$(	36,634	)$	&	$(	21,184	)$	&		&		&		\\
+Female	&		-72,436		&		286		&		78,696		&		-20,173		&		3,914		&		13,192		&		4,038		&		867		&		-19,703		&		17,043		&	5,725	&	2,862	&	8,587	\\
+	&	$(	4,060	)$	&	$(	122	)$	&	$(	62,421	)$	&	$(	6,339	)$	&	$(	2,489	)$	&	$(	156,345	)$	&	$(	68,235	)$	&	$(	1,445	)$	&	$(	34,889	)$	&	$(	18,863	)$	&		&		&		\\
+Male	&		-72,436		&				&		1,899		&		1,239		&		-1,257		&		-152,816		&		-34,963		&		-168		&		-51,759		&		3,308		&	-306,954	&	-153,477	&	-460,431	\\
+	&	$(	4,060	)$	&				&	$(	46,069	)$	&	$(	11,222	)$	&	$(	2,847	)$	&	$(	240,772	)$	&	$(	25,359	)$	&	$(	2,500	)$	&	$(	57,368	)$	&	$(	18,202	)$	&		&		&		\\
+Pooled	&		-72,436		&		149		&		38,273		&		-9,495		&		1,744		&		-51,179		&		-26,458		&		593		&		-38,808		&		16,337		&	-141,278	&	-70,639	&	-211,917	\\
+	&	$(	4,060	)$	&	$(	68	)$	&	$(	36,950	)$	&	$(	7,286	)$	&	$(	1,891	)$	&	$(	167,140	)$	&	$(	50,614	)$	&	$(	1,807	)$	&	$(	36,634	)$	&	$(	21,184	)$	&		&		&		\\
 \bottomrule
 \end{tabular}
 \begin{tablenotes}
@@ -89,10 +99,15 @@ Note: This table shows the non-discounted value of government investment by comp
 \caption{Government Investment per Individual, Treatment vs. Alternative Preschool}\label{tab:dwl-npv-rslts8}
 \begin{tabular}{lccccccccccccc}
 \toprule
-Sample	&	Treatment	&	\mc{1}{c}{Alternative }	&	Crime	&	\mc{1}{c}{Subject's}&	\mc{1}{c}{Mother's}	&	Health	&\mc{1}{c}{Transfer} & DI Claim & SSI Claim & SS Claim & Subtotal & DWL &	Total	\\
+Sample	&	Treatment	&	\mc{1}{c}{Alternative }	&	Crime	&	\mc{1}{c}{Subject's}&	\mc{1}{c}{Mother's}	&	Health	&\mc{1}{c}{Transfer} & DI Claim & SS Claim & SSI Claim & Subtotal & DWL &	Total	\\
 		& 		&	\mc{1}{c}{Preschool}			&			&	\mc{1}{c}{Education}		&	\mc{1}{c}{Education}	&		&  \mc{1}{c}{Income} &		&	&		&		&		& 	\\
 \midrule
-Female	&		-36,716		&		13,568		&		3,757		&		7,640		&		1,088		&		-40,453		&		10,462		&		-193		&		-3,969		&		-251		&	-45,066	&	-22,533	&	-67,599	\\	&	$(	1,938	)$	&	$(	1,358	)$	&	$(	7,131	)$	&	$(	4,377	)$	&	$(	887	)$	&	$(	53,608	)$	&	$(	24,884	)$	&	$(	404	)$	&	$(	12,269	)$	&	$(	5,445	)$	&		&		&		\\Male	&		-36,716		&		13,320		&		12,038		&		2,603		&		-259		&		-34		&		-7,553		&		124		&		-7,857		&		1,675		&	-22,660	&	-11,330	&	-33,990	\\	&	$(	1,938	)$	&	$(	1,418	)$	&	$(	17,508	)$	&	$(	3,511	)$	&	$(	1,181	)$	&	$(	84,613	)$	&	$(	10,017	)$	&	$(	849	)$	&	$(	21,221	)$	&	$(	6,199	)$	&		&		&		\\Pooled	&		-36,716		&		13,593		&		3,897		&		3,924		&		418		&		-28,001		&		-1,444		&		-49		&		-5,825		&		2,114		&	-48,090	&	-24,045	&	-72,134	\\	&	$(	1,938	)$	&	$(	1,020	)$	&	$(	10,401	)$	&	$(	3,087	)$	&	$(	803	)$	&	$(	54,992	)$	&	$(	16,572	)$	&	$(	487	)$	&	$(	13,881	)$	&	$(	4,920	)$	&		&		&		\\
+Female	&		-36,716		&		13,568		&		3,757		&		7,640		&		1,088		&		-40,453		&		10,462		&		-193		&		-3,969		&		-251		&	-45,066	&	-22,533	&	-67,599	\\
+	&	$(	1,938	)$	&	$(	1,358	)$	&	$(	7,131	)$	&	$(	4,377	)$	&	$(	887	)$	&	$(	53,608	)$	&	$(	24,884	)$	&	$(	404	)$	&	$(	12,269	)$	&	$(	5,445	)$	&		&		&		\\
+Male	&		-36,716		&		13,320		&		12,038		&		2,603		&		-259		&		-34		&		-7,553		&		124		&		-7,857		&		1,675		&	-22,660	&	-11,330	&	-33,990	\\
+	&	$(	1,938	)$	&	$(	1,418	)$	&	$(	17,508	)$	&	$(	3,511	)$	&	$(	1,181	)$	&	$(	84,613	)$	&	$(	10,017	)$	&	$(	849	)$	&	$(	21,221	)$	&	$(	6,199	)$	&		&		&		\\
+Pooled	&		-36,716		&		13,593		&		3,897		&		3,924		&		418		&		-28,001		&		-1,444		&		-49		&		-5,825		&		2,114		&	-48,090	&	-24,045	&	-72,134	\\
+	&	$(	1,938	)$	&	$(	1,020	)$	&	$(	10,401	)$	&	$(	3,087	)$	&	$(	803	)$	&	$(	54,992	)$	&	$(	16,572	)$	&	$(	487	)$	&	$(	13,881	)$	&	$(	4,920	)$	&		&		&		\\
 \bottomrule
 \end{tabular}
 \begin{tablenotes}
@@ -103,6 +118,87 @@ Note: This table shows the non-discounted value of government investment by comp
 \end{adjustbox}
 \end{table}
 
+\begin{table}[htbp]
+\centering
+\footnotesize
+\begin{adjustbox}{width=1.2\textwidth,center}
+\begin{threeparttable}
+\caption{Government Investment per Individual, Treatment vs. Next Best, Discounting at 3\%}\label{tab:dwl-npv-rslts2-dr3}
+\begin{tabular}{lccccccccccccc}
+\toprule
+Sample	&	Treatment	&	\mc{1}{c}{Alternative }	&	Crime	&	\mc{1}{c}{Subject's}&	\mc{1}{c}{Mother's}	&	Health	&\mc{1}{c}{Transfer} & DI Claim & SS Claim & SSI Claim & Subtotal & DWL &	Total	\\
+		& 		&	\mc{1}{c}{Preschool}			&			&	\mc{1}{c}{Education}		&	\mc{1}{c}{Education}	&		&  \mc{1}{c}{Income} &		&	&		&		&		& 	\\
+\midrule
+Female	&	-61,971	&	13,237	&	14,508	&	9,064	&	1,033	&	-8,653	&	4,566	&	-86	&	-175	&	99	&	-28,380	&	-14,190	&	-42,569	\\
+	&	$(3,093)$	&	$(1,629)$	&	$(7,636)$	&	$(6,562)$	&	$(1,101)$	&	$(16,616)$	&	$(24,001)$	&	$(173)$	&	$(2,865)$	&	$(2,165)$	&		&		&		\\
+Male	&	-61,971	&	11,701	&	10,025	&	6,219	&	-3	&	-6,054	&	-10,626	&	131	&	-3,469	&	1,531	&	-52,516	&	-26,258	&	-78,775	\\
+	&	$(3,093)$	&	$(1,436)$	&	$(16,796)$	&	$(4,729)$	&	$(1,260)$	&	$(28,216)$	&	$(9,849)$	&	$(384)$	&	$(5,492)$	&	$(2,861)$	&		&		&		\\
+Pooled	&	-61,971	&	12,192	&	14,010	&	4,833	&	704	&	-9,038	&	-4,612	&	20	&	-2,446	&	1,318	&	-44,991	&	-22,495	&	-67,486	\\
+	&	$(3,093)$	&	$(1,093)$	&	$(8,937)$	&	$(4,529)$	&	$(734)$	&	$(17,397)$	&	$(13,845)$	&	$(201)$	&	$(3,155)$	&	$(2,105)$	&		&		&		\\
+\bottomrule
+\end{tabular}
+\begin{tablenotes}
+\raggedright
+Note: This table shows the non-discounted value of government investment by component. The Crime and Health components only include public costs. The Subject's Education and Mother's Education components only include education costs up to age 18, after which costs are considered private. The DWL column presents just the DWL of public expenditures (including transfers), assuming a marginal tax rate of 0.5. The Total is the sum of all the previous columns. These estimates compare those in treatment with those who attended alternative preschool.
+\end{tablenotes}
+\end{threeparttable}
+\end{adjustbox}
+\end{table}
+
+\begin{table}[htbp]
+\centering
+\footnotesize
+\begin{adjustbox}{width=1.2\textwidth,center}
+\begin{threeparttable}
+\caption{Government Investment per Individual, Treatment vs. Stay at Home, Discounting at 3\%}\label{tab:dwl-npv-rslts5-dr3}
+\begin{tabular}{lccccccccccccc}
+\toprule
+Sample	&	Treatment	&	\mc{1}{c}{Alternative }	&	Crime	&	\mc{1}{c}{Subject's}&	\mc{1}{c}{Mother's}	&	Health	&\mc{1}{c}{Transfer} & DI Claim & SS Claim & SSI Claim & Subtotal & DWL &	Total	\\
+		& 		&	\mc{1}{c}{Preschool}			&			&	\mc{1}{c}{Education}		&	\mc{1}{c}{Education}	&		&  \mc{1}{c}{Income} &		&	&		&		&		& 	\\
+\midrule
+Female	&	-66,213	&	254	&	36,581	&	-13,844	&	2,368	&	4,446	&	-161	&	169	&	-2,308	&	3,834	&	-34,873	&	-17,437	&	-52,310	\\
+	&	$(3,719)$	&	$(108)$	&	$(26,838)$	&	$(4,504)$	&	$(1,545)$	&	$(24,767)$	&	$(25,986)$	&	$(291)$	&	$(4,242)$	&	$(3,978)$	&		&		&		\\
+Male	&	-66,213	&		&	4,337	&	792	&	-874	&	-17517	&	-14,815	&	-27	&	-6,306	&	572	&	-100,049	&	-50,025	&	-150,074	\\
+	&	$(3,719)$	&		&	$(21,877)$	&	$(8,687)$	&	$(1,740)$	&	$(37,608)$	&	$(10,242)$	&	$(491)$	&	$(7,001)$	&	$(3,204)$	&		&		&		\\
+Pooled	&	-66,213	&	133	&	19,663	&	-6,566	&	1,000	&	-2,429	&	-14,245	&	125	&	-4,724	&	3,751	&	-69,504	&	-34,752	&	-104,256	\\
+	&	$(3,719)$	&	$(61)$	&	$(16,782)$	&	$(5,293)$	&	$(1,167)$	&	$(26,957)$	&	$(20,626)$	&	$(364)$	&	$(4,489)$	&	$(4,716)$	&		&		&		\\
+\bottomrule
+\end{tabular}
+\begin{tablenotes}
+\raggedright
+Note: This table shows the non-discounted value of government investment by component. The Crime and Health components only include public costs. The Subject's Education and Mother's Education components only include education costs up to age 18, after which costs are considered private. The DWL column presents just the DWL of public expenditures (including transfers), assuming a marginal tax rate of 0.5. The Total is the sum of all the previous columns. These estimates compare those in treatment with those who attended alternative preschool.
+\end{tablenotes}
+\end{threeparttable}
+\end{adjustbox}
+\end{table}
+
+\begin{table}[htbp]
+\centering
+\footnotesize
+\begin{adjustbox}{width=1.2\textwidth,center}
+\begin{threeparttable}
+\caption{Government Investment per Individual, Treatment vs. Alternative Preschool, Discounting at 3\%}\label{tab:dwl-npv-rslts8-dr3}
+\begin{tabular}{lccccccccccccc}
+\toprule
+Sample	&	Treatment	&	\mc{1}{c}{Alternative }	&	Crime	&	\mc{1}{c}{Subject's}&	\mc{1}{c}{Mother's}	&	Health	&\mc{1}{c}{Transfer} & DI Claim & SS Claim & SSI Claim & Subtotal & DWL &	Total	\\
+		& 		&	\mc{1}{c}{Preschool}			&			&	\mc{1}{c}{Education}		&	\mc{1}{c}{Education}	&		&  \mc{1}{c}{Income} &		&	&		&		&		& 	\\
+\midrule
+Female	&	-67,126	&	17,187	&	4,074		&	10,253	&	995	&	-13,673	&	10,054	&	-62	&	-994		&	-142		&	-39,434	&	-19,717	&	-59,151	\\
+		&	$(3,550)$		&	$(1,622)$		&	$(5,294)$		&	$(6,386)$		&	$(1,075)$	&	$(16,205)$	&	$(21,045)$	&	$(168)$	&	$(2,988)$		&	$(2,402)$		&			&			&			\\
+Male		&	-67,126	&	15,321	&	12,289	&	3,754		&	-171	&	3,194		&	-7,573	&	74	&	-1,898	&	844		&	-41,291	&	-20,645	&	-61,936	\\
+		&	$(3,550)$		&	$(1,690)$		&	$(16,397)$	&	$(5,168)$		&	$(1,589)$	&	$(26,291)$	&	$(8,791)$		&	$(349)$	&	$(5,178)$		&	$(2,424)$		&			&			&			\\
+Pooled	&	-67,126	&	16,348	&	4,132		&	5,264		&	355	&	-6,911	&	-2,093	&	7	&	-1,475	&	1,102		&	-50,396	&	-25,198	&	-75,593	\\
+		&	$(3,550)$		&	$(1,222)$		&	$(9,099)$		&	$(4,398)$		&	$(1,069)$	&	$(16,999)$	&	$(13,970)$	&	$(200)$	&	$(3,386	)$	&	$(2,128	)$	&			&			&			\\
+
+\bottomrule
+\end{tabular}
+\begin{tablenotes}
+\raggedright
+Note: This table shows the non-discounted value of government investment by component. The Crime and Health components only include public costs. The Subject's Education and Mother's Education components only include education costs up to age 18, after which costs are considered private. The DWL column presents just the DWL of public expenditures (including transfers), assuming a marginal tax rate of 0.5. The Total is the sum of all the previous columns. These estimates compare those in treatment with those who attended alternative preschool.
+\end{tablenotes}
+\end{threeparttable}
+\end{adjustbox}
+\end{table}
 
 \pagebreak
 \singlespace
