--- a/SomePoints.tex
+++ b/SomePoints.tex
@@ -9,25 +9,25 @@
 
 \noindent (1) Basic points; evidence, and trade-offs \\ 
 
-\noindent (a) Strong body of evidence for early childhood programs, but this is one of the few papers attempting to tackle the issue using various measures of outcomes. This is more a characteristics of the papers by Heckman and coauthors than what it is usually done in either Economics or Development Psychology journals. In Economics: \textbf{common practice to make a big deal out of of a program based on one or two outcomes}.\\
+\noindent (a) Strong body of evidence for early childhood programs, but this is one of the few papers attempting to tackle the issue using various measures of outcomes. This is more characteristic of the papers by Heckman and coauthors than what it is usually done in either Economics or Developmental Psychology journals. In Economics: \textbf{common practice to make a big deal out of of a program based on one or two outcomes}.\\
 
 \noindent (b) Ever-present concern: targeting problem early on is efficient? But formulating the program seriously and highlighting the monetary \textbf{trade-offs between prevention and remediation} has not been done and it's important to highlight. Under standard convexity conditions, it is probably true that it's not always the case that prevention is the most cost-effective.\\
 
 \noindent (2) Targeting of social programs.\\ 
 
-\noindent (a) Reduced deadweight loss: not only reducing the money required to fund the prevention/remediation program; but also \textbf{reducing the money needed later on given that populations at risk are the most expensive in terms of public services provided}, as documented by the authors.\\
+\noindent (a) Reduced deadweight loss: not only reducing the money required to fund the prevention/remediation program, but also \textbf{reducing the money needed later on given that populations at risk are the most expensive in terms of public services provided}, as documented by the authors.\\
 
-\noindent (b) Builds support $\Rightarrow$ \textbf{Supplement the families} (father and mother), where there are weak links due to father absence, (low-educated) mother needing to work and care of children.\\ 
+\noindent (b) Builds support $\Rightarrow$ \textbf{Supplement the families} (father and mother), where there are weak links due to father absence, (low-educated) mother needing to work and care for children.\\ 
 
 \noindent (3) Social problems in adult life are clustered among a disadvantaged lower decile.\\
 
-\noindent (a) Same people are the source of multiple problems. This paper makes progress towards a better understanding of a measure of childhood disadvantaged. But we are \textbf{still lacking a measure that clearly weights each of the aspects of what is important during childhood}, initial endowments, parents, environment, etc.\\
+\noindent (a) Same people are the source of multiple problems. This paper makes progress towards a better understanding of a measure of childhood disadvantaged. But we are \textbf{still lacking a measure that clearly weighs each of the aspects of what is important during childhood}, initial endowments, parents, environment, etc.\\
 
 \noindent (4) Origin of social problems; finding those at risk is a first step toward good social policy. \textbf{In particular because the latest findings on early childhood education programs show that it is the disadvantaged who benefit the most} (e.g. Elango et al 2016).\\
 
-\noindent (5) Antidote to egalitarian cries for ``universality''. Universality is political. (i) No evidence supports universality; the evidence points towards targeting the disadvantaged. (ii) Sliding fees for social programs is an alternative: universal access, but not universal pricing.\\
+\noindent (5) Antidote to egalitarian cries for ``universality.'' Universality is political. (i) No evidence supports universality; the evidence points towards targeting the disadvantaged. (ii) Sliding fees for social programs is an alternative: universal access, but not universal pricing.\\
 
-\noindent (6) Paper does not identify the effectiveness of interventions; just the opportunities. \textbf{But it does touch on important ideas towards the evaluation of effectiveness, as prediction}.\\
+\noindent (6) Paper does not identify the effectiveness of interventions; just the opportunities. \textbf{But it does touch on important ideas towards the evaluation of effectiveness, such as prediction}.\\
 
 \noindent (7) Benefits of targeting \textbf{the disadvantaged}. Especially in the case of early childhood education. Evidence from multiple programs, multiple evaluation strategies, and even multiple countries indicates this.\\ 
 
